[gd_scene load_steps=29 format=3 uid="uid://cajvb2w2s5e2e"]

[ext_resource type="Texture2D" uid="uid://c5nc32fmoxw2p" path="res://assets/enemies/buho Boss/buho.png" id="1_6nkuy"]
[ext_resource type="Script" uid="uid://cgou0h0ccvl28" path="res://scripts/enemies/buho/buho.gd" id="1_qdy1l"]
[ext_resource type="PackedScene" uid="uid://bby62dq4wl7n7" path="res://utils/state_machine/state_machine.tscn" id="3_u6610"]
[ext_resource type="Script" uid="uid://56yy74xx7pbq" path="res://scripts/enemies/buho/idle.gd" id="4_u6610"]
[ext_resource type="Script" uid="uid://ckvpsr2c6cf1a" path="res://scripts/enemies/buho/follow.gd" id="5_lfe8s"]
[ext_resource type="Script" uid="uid://dv2hsawjlcium" path="res://scripts/enemies/buho/patrol.gd" id="6_kjckl"]
[ext_resource type="Script" uid="uid://bgcwjji5842xl" path="res://scripts/enemies/buho/die.gd" id="7_8amqm"]
[ext_resource type="Script" uid="uid://hykkfcte7tpj" path="res://scripts/enemies/buho/attack.gd" id="8_kynat"]
[ext_resource type="PackedScene" uid="uid://beu5b0r7iwe24" path="res://scenes/enemies/buho/attack_buho.tscn" id="9_y7seg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o2bvu"]
atlas = ExtResource("1_6nkuy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdy1l"]
atlas = ExtResource("1_6nkuy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6610"]
atlas = ExtResource("1_6nkuy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfe8s"]
atlas = ExtResource("1_6nkuy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjckl"]
atlas = ExtResource("1_6nkuy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8amqm"]
atlas = ExtResource("1_6nkuy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kynat"]
atlas = ExtResource("1_6nkuy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7seg"]
atlas = ExtResource("1_6nkuy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r77a4"]
atlas = ExtResource("1_6nkuy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tam65"]
atlas = ExtResource("1_6nkuy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucyat"]
atlas = ExtResource("1_6nkuy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3r3b0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2bvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdy1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6610")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfe8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjckl")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8amqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kynat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7seg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r77a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tam65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucyat")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tq4jt"]
radius = 15.0
height = 62.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7seg"]
bg_color = Color(0.7019608, 0.05490196, 0.1882353, 0.44705883)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r77a4"]
bg_color = Color(0.7668713, 0, 0.14998737, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_u6610"]
radius = 34.0147

[sub_resource type="CircleShape2D" id="CircleShape2D_lfe8s"]
radius = 144.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kjckl"]
radius = 85.00588

[sub_resource type="CircleShape2D" id="CircleShape2D_8amqm"]
radius = 217.0023

[node name="buho" type="CharacterBody2D" node_paths=PackedStringArray("health_bar", "animSprite", "navigation", "state_machine") groups=["enemies"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qdy1l")
attack_scene = ExtResource("9_y7seg")
longAttack = 10
health_bar = NodePath("ProgressBar")
animSprite = NodePath("AnimatedSprite2D")
navigation = NodePath("NavigationAgent2D")
state_machine = NodePath("StateMachine")
speed = 30
attack = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3r3b0")
animation = &"run"
frame = 5
frame_progress = 0.64987004

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_tq4jt")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -33.0
offset_top = -56.0
offset_right = -1.0
offset_bottom = -52.0
theme_override_styles/background = SubResource("StyleBoxFlat_y7seg")
theme_override_styles/fill = SubResource("StyleBoxFlat_r77a4")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 40.0

[node name="areas" type="Node2D" parent="."]

[node name="meleAtack" type="Area2D" parent="areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/meleAtack"]
shape = SubResource("CircleShape2D_u6610")
debug_color = Color(0.9414779, 0, 0.61222285, 0.155)

[node name="longAttack" type="Area2D" parent="areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/longAttack"]
shape = SubResource("CircleShape2D_lfe8s")
debug_color = Color(0, 0.55544883, 0.9063318, 0.13800001)

[node name="areaAttack" type="Area2D" parent="areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/areaAttack"]
shape = SubResource("CircleShape2D_kjckl")
debug_color = Color(0.368734, 0.4788676, 1, 0.16000001)

[node name="detectionArea" type="Area2D" parent="areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/detectionArea"]
shape = SubResource("CircleShape2D_8amqm")
debug_color = Color(0, 0.60038817, 0.70000815, 0)

[node name="timers" type="Node" parent="."]

[node name="coldown_bassic" type="Timer" parent="timers"]
wait_time = 1.5

[node name="coldown_area" type="Timer" parent="timers"]

[node name="coldown_long" type="Timer" parent="timers"]
wait_time = 2.0

[node name="reacalculate_postion" type="Timer" parent="timers"]

[node name="TimerPatrol" type="Timer" parent="timers"]
wait_time = 2.5
autostart = true

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("3_u6610")]
default_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("4_u6610")

[node name="follow" type="Node" parent="StateMachine"]
script = ExtResource("5_lfe8s")

[node name="patrol" type="Node" parent="StateMachine"]
script = ExtResource("6_kjckl")

[node name="dead" type="Node" parent="StateMachine"]
script = ExtResource("7_8amqm")

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource("8_kynat")

[node name="Attack hummer" parent="." instance=ExtResource("9_y7seg")]

[connection signal="area_entered" from="areas/meleAtack" to="." method="_on_mele_atack_area_entered"]
[connection signal="area_exited" from="areas/meleAtack" to="." method="_on_mele_atack_area_exited"]
[connection signal="body_entered" from="areas/meleAtack" to="." method="_on_mele_atack_body_entered"]
[connection signal="body_exited" from="areas/meleAtack" to="." method="_on_mele_atack_body_exited"]
[connection signal="body_entered" from="areas/longAttack" to="." method="_on_long_attack_body_entered"]
[connection signal="body_exited" from="areas/longAttack" to="." method="_on_long_attack_body_exited"]
[connection signal="body_entered" from="areas/areaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="areas/areaAttack" to="." method="_on_area_attack_body_exited"]
[connection signal="body_entered" from="areas/detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="areas/detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="timers/coldown_bassic" to="." method="_on_coldown_bassic_timeout"]
[connection signal="timeout" from="timers/coldown_area" to="." method="_on_coldown_area_timeout"]
[connection signal="timeout" from="timers/coldown_long" to="." method="_on_coldown_long_timeout"]
[connection signal="timeout" from="timers/reacalculate_postion" to="." method="_on_reacalculate_postion_timeout"]
[connection signal="timeout" from="timers/TimerPatrol" to="." method="_on_timer_patrol_timeout"]
